--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "nodemailer": "^7.0.10",
     "postcss": "^8.5.6",
